Bug 411034 - REGRESSION: Discover doesn’t show user reviews anymore
Summary: REGRESSION: Discover doesn’t show user reviews anymore
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: VHI grave
Target Milestone: ---
Assignee: Dan Leinir Turthra Jensen
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-08-18 10:29 UTC by Karl Ove Hufthammer
Modified: 2019-09-03 20:02 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot showing Discover with no reviews listed (383.68 KB, image/png)
2019-08-18 10:29 UTC, Karl Ove Hufthammer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Karl Ove Hufthammer 2019-08-18 10:29:13 UTC
Created attachment 122216 [details]
Screenshot showing Discover with no reviews listed

SUMMARY
Discover doesn’t show user reviews. No matter which application I select, the review section shows ‘Be the first to write a review!’ (or ‘Install this app and be the first to write a review!’).

But according to this screenshot from 2017, Discover should have a feature for displaying reviews: http://www.jgrulich.cz/wp-content/uploads/2017/03/discover-odrs1.png

STEPS TO REPRODUCE
1. Open Discover.
2. Select an application which has ratings.
3. Scroll down (to below the application description).

OBSERVED RESULT
The text ‘Be the first to write a review!’ or ‘Install this app and be the first to write a review!’.

EXPECTED RESULT
A list of reviews, a button show reviews or something similar.


SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20190814
KDE Plasma Version: 5.16.4
KDE Frameworks Version: 5.60.0
Qt Version: 5.13.0
Kernel Version: 5.2.8-1-default
OS Type: 64-bit
Processors: 4 × Intel® Core™ i5-2500 CPU @ 3.30GHz
Memory: 15,6 GiB


ADDITIONAL INFORMATION
I observe this both with the packaged version of Discover and with the latest Git version. And on both with a ‘Norwegian Nynorsk’ locale and an ‘American English’ locale. I’ll attach a screenshot.
Comment 1 Nate Graham 2019-08-19 15:37:52 UTC
Can reproduce on Neon and Manjaro too. :/ If it's so widespread, it's probably a real bug in Discover rather than all the distros providing bad OCS data.
Comment 2 Dan Leinir Turthra Jensen 2019-08-19 17:12:52 UTC
Just for completion, these reviews are ODRS content, not OCS... But yes, still not great they've gone missing somehow.
Comment 3 Aleix Pol 2019-08-20 16:43:40 UTC
Hey, thanks for reporting.
Yes, something seems to have changed on the server side, because it even breaks on older versions.

I'm getting a BAD REQUEST reply from any fetch query, here's an example one:
{ "app_id": "org.kde.gcompris.desktop", "distro": "KDE neon", "limit": 0, "locale": "ca_ES", "user_hash": "db2ad139150c10fe35391e9dc540602fe9657d27", "version": "stable"}

Will reach out to ODRS maintainers to see if they know what could be going on.
Comment 4 Aleix Pol 2019-08-27 14:03:29 UTC
Git commit 5e994dca11f4f877489caf6e8c57ede89e416d14 by Aleix Pol.
Committed on 27/08/2019 at 14:02.
Pushed by apol into branch 'Plasma/5.16'.

odrs: fix fetching reviews

M  +1    -1    libdiscover/appstream/OdrsReviewsBackend.cpp

https://commits.kde.org/discover/5e994dca11f4f877489caf6e8c57ede89e416d14
Comment 5 Karl Ove Hufthammer 2019-08-28 19:28:41 UTC
Reopening. I still don’t get any reviews (Git master version). There are two cases:

1. If I click on an (installed) application *before* the ‘Fetching Updates...’ process is finished (which can easily take a minute or so), I get the (translated version) of:

   Install this app and be the first to write a review!

And the log on the console says:

   org.kde.plasma.libdiscover: error fetching reviews: "Error transferring https://odrs.gnome.org/1.0/reviews/api/fetch - server replied: BAD REQUEST" "{\n    \"msg\": \"missing data, expected version\",\n    \"success\": false\n}"


2. If I click on an application *after* the ‘Fetching Updates...’ process is finished, I get (translated version) of:

    Be the first to write a review!

And the log on the console says:

    <Unknown File>:7: TypeError: Type error
    QFSFileEngine::open: No file name specified
    file:///usr/lib64/qt5/qml/org/kde/kirigami.2/ItemViewHeader.qml:65:9: Unable to assign QQuickPopupItem to Page_QMLTYPE_63
Comment 6 Nate Graham 2019-08-28 19:31:23 UTC
#1 is a separate semi-known-ish issue. Please file a new bug to track that.

I am not able to reproduce #2. Please file a new but for it, and attach a screen recording.

Thanks!
Comment 7 Nate Graham 2019-09-03 17:39:01 UTC
*** Bug 411397 has been marked as a duplicate of this bug. ***
Comment 8 Nate Graham 2019-09-03 17:39:14 UTC
*** Bug 411396 has been marked as a duplicate of this bug. ***
Comment 9 Karl Ove Hufthammer 2019-09-03 17:48:49 UTC
(In reply to Nate Graham from comment #6)
> #1 is a separate semi-known-ish issue. Please file a new bug to track that.
> 
> I am not able to reproduce #2. Please file a new but for it, and attach a
> screen recording.

I don’t understand. First I reopened this bug because the original reported issue (including ‘subissues’ #1 and #2) was *not* really fixed. Then you reclose this bug as ‘fixed’ and tell me to instead file new, *separate* bugs for #1 and #2. Then I do that exactly that. And then you close these new bug reports as duplicates of this (‘fixed’) issue. This is really demotivating!
Comment 10 Nate Graham 2019-09-03 20:02:13 UTC
Ah, I didn't realize you were using Discover from git master, because the version number on those bug reports said "KDE Plasma Version: 5.16.4". The fix is in Plasma 5.16.5, si if you're really using 5.16.4, you would be hitting the original issue because you didn't yet have the fix.

If those issues are hitting you when using either git master or Plasma 5.16.5 (since it was just released today), please re-open the bugs in question with a comment indicating as such. Thanks, and sorry for the confusion!