odrs: fix fetching reviews

BUG: 411034